force-app/main/default/objects/maps__TPRole__c/maps__TPRole__c.object-meta.xml
<CustomObject>
    <label>Territory Planning Role</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Planning Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>