force-app/main/default/objects/maps__TPRole__c/fields/maps__AccountAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>maps__AccountAccessLevel__c</fullName>
    <label>Account Access Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>