force-app/main/default/objects/maps__TPRole__c/fields/maps__AccountTeamRole__c.field-meta.xml
<CustomField>
    <fullName>maps__AccountTeamRole__c</fullName>
    <label>Account Team Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>