force-app/main/default/objects/maps__TPRole__c/fields/maps__CaseAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>maps__CaseAccessLevel__c</fullName>
    <label>Case Access Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>