force-app/main/default/objects/maps__TPRole__c/fields/maps__OpportunityAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>maps__OpportunityAccessLevel__c</fullName>
    <label>Opportunity Access Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>