force-app/main/default/objects/maps__TPRole__c/fields/maps__TerritoryTeamRole__c.field-meta.xml
<CustomField>
    <fullName>maps__TerritoryTeamRole__c</fullName>
    <label>Territory Team Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>